--- a/index.html
+++ b/index.html
@@ -94,19 +94,18 @@
 
   <section id="fifth-section">
     <div class="communication-div">
-      <h1 id="gmail-id">Conatact Us</h1>
-      <img src="images/logo/gmail.png" alt="">
+      <h3>Follow <img src="images/icone/icons8-facebook-48.png" alt=""> </h3>
     </div>
+  
     <div class="communication-div">
-      <h1 id="youtube-id">Subscribe</h1>
-      <img src="images/logo/youtube.png" alt="">
+      <h3>Contact<img src="images/icone/icons8-gmail-48.png" alt=""> </h3>
     </div>
+  
     <div class="communication-div">
-      <h1 id="fb-inst-id">Follow us</h1>
-      <img src="images/logo/blue-facebook-logo-19.png" alt="">
-      <img src="images/logo/intagram.jpg" alt="">
+      <h3>Order<img src="images/icone/icons8-food-delivery-64.png" alt=""> </h3>
     </div>
   </section>
+
 
   
 
@@ -116,6 +115,9 @@
       <p>@Food Network , 2022. dhaka -Bangladesh. </p>
     </div>
   </footer>
+
+  
+
 
 </body>
 
