--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   </section>
 
   <section id="fourth-section">
+
     <div class="food-item-div">
 
       <p> <img src="images/food/Project Cover.jpg" alt="">
@@ -89,36 +90,22 @@
       <p> <img src="images/food/Project Cover1.jpg" alt="">
       <h1>Beef Recipes !</h1> the item is most popular item in our restaurant.if you order this item, as soon as posible
       we delivery at your home. </p>
+      
     </div>
   </section>
-
-  <section id="fifth-section">
-    <div class="communication-div">
-      <h3>Follow <img src="images/icone/icons8-facebook-48.png" alt=""> </h3>
-    </div>
-  
-    <div class="communication-div">
-      <h3>Contact<img src="images/icone/icons8-gmail-48.png" alt=""> </h3>
-    </div>
-  
-    <div class="communication-div">
-      <h3>Order<img src="images/icone/icons8-food-delivery-64.png" alt=""> </h3>
-    </div>
-  </section>
-
-
-  
 
   <footer>
-    <div id="food-network-div">
+    <div class="food-network-div">
       <h1 id="head-network"><span id="food-id">Food</span> <span id="network-id">Network</span> </h1>
       <p>@Food Network , 2022. dhaka -Bangladesh. </p>
+      <img src="images/icone/icons8-facebook-48.png" alt="">
+      <img src="images/icone/icons8-gmail-48.png" alt="">
+      <img src="images/icone/icons8-food-delivery-64.png" alt="">
+      <img src="images/icone/icons8-instagram-48.png" alt="">
+      <img src="images/icone/icons8-twitter-48.png" alt="">
     </div>
   </footer>
 
-  
-
-
-</body>
+  </body>
 
 </html>
