--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <p> <img src="images/food/Project Cover.jpg" alt="">
       <h1>Special Kabab !</h1> This Special Kabab is amazing Testi and reasonable price. it's test is different other
-      general kabab. if you order this item, as soon as posible we delivery at your home. </p>
+      general kabab , if you order this item, as soon as posible we delivery at your home . </p>
 
     </div>
 
@@ -90,7 +90,7 @@
       <p> <img src="images/food/Project Cover1.jpg" alt="">
       <h1>Beef Recipes !</h1> the item is most popular item in our restaurant.if you order this item, as soon as posible
       we delivery at your home. </p>
-      
+
     </div>
   </section>
 
